--- a/doc/dissertation/content/results/transport/mms_sinx_ss/description.tex
+++ b/doc/dissertation/content/results/transport/mms_sinx_ss/description.tex
@@ -67,7 +67,7 @@ currently known.
    \centering
       \includegraphics[width=\textwidth]
         {\contentdir/results/transport/mms_sinx_ss/images/solution.pdf}
-      \caption{Comparison of Solutions for Convergence Test Problem 1 with 32 Cells}
+      \caption{\sloppy Comparison of Solutions for Convergence Test Problem 1 with 32 Cells}
    \label{fig:mms_sinx_ss_solution}
 \end{figure}
 %-------------------------------------------------------------------------------
