--- a/doc/dissertation/content/results/transport/source_in_absorber/description.tex
+++ b/doc/dissertation/content/results/transport/source_in_absorber/description.tex
@@ -84,8 +84,8 @@ FCT Solution Bounds & Analytic\\
 \begin{figure}[ht]
    \includegraphics[width=\textwidth]
      {\contentdir/results/transport/source_in_absorber/images/strong1.pdf}
-   \caption{Steady-State Solutions for the Source-in-Absorber Problem
-     with Strongly Imposed Dirichlet Boundary Conditions with $L_i^-=L_i^+=1$}
+   \caption{\emergencystretch\textwidth Steady-State Solutions for the Source-in-Absorber Problem
+     with Strong\-ly Imposed Dirichlet Boundary Conditions with $L_i^-=L_i^+=1$}
    \label{fig:source_in_absorber_strong1}
 \end{figure}
 %-------------------------------------------------------------------------------
