--- a/doc/dissertation/content/results/transport/three_region/description.tex
+++ b/doc/dissertation/content/results/transport/three_region/description.tex
@@ -80,7 +80,7 @@ FCT Solution Bounds & (varies by run)\\
    \centering
    \includegraphics[width=0.9\textwidth]
      {\contentdir/results/transport/three_region/angularflux_SSP3_dmp.pdf}
-   \caption{Comparison of Solutions for the 3-Region Test Problem Using SSPRK33
+   \caption{Comparison of Solutions for the 3-Region Test Problem Using SSPRK\-33
      and DMP Solution Bounds}
    \label{fig:three_region_dmp}
 \end{figure}
@@ -90,7 +90,7 @@ FCT Solution Bounds & (varies by run)\\
    \centering
    \includegraphics[width=0.9\textwidth]
      {\contentdir/results/transport/three_region/angularflux_SSP3_analytic.pdf}
-   \caption{Comparison of Solutions for the 3-Region Test Problem Using SSPRK33
+   \caption{Comparison of Solutions for the 3-Region Test Problem Using SSPRK\-33
      and Analytic Solution Bounds}
    \label{fig:three_region_analytic}
 \end{figure}
@@ -100,7 +100,7 @@ FCT Solution Bounds & (varies by run)\\
    \centering
    \includegraphics[width=0.9\textwidth]
      {\contentdir/results/transport/three_region/angularflux_SSP3_modified_analytic.pdf}
-   \caption{Comparison of Solutions for the 3-Region Test Problem Using SSPRK33
+   \caption{Comparison of Solutions for the 3-Region Test Problem Using SSPRK\-33
      and Modified Analytic Solution Bounds}
    \label{fig:three_region_modified_analytic}
 \end{figure}
@@ -110,7 +110,7 @@ FCT Solution Bounds & (varies by run)\\
    \centering
    \includegraphics[width=0.9\textwidth]
      {\contentdir/results/transport/three_region/angularflux_SSP3_upwind.pdf}
-   \caption{Comparison of Solutions for the 3-Region Test Problem Using SSPRK33
+   \caption{Comparison of Solutions for the 3-Region Test Problem Using SSPRK\-33
      and Upwind Analytic Solution Bounds}
    \label{fig:three_region_upwind}
 \end{figure}
