--- a/doc/dissertation/content/results/transport/void_to_absorber/description.tex
+++ b/doc/dissertation/content/results/transport/void_to_absorber/description.tex
@@ -312,8 +312,8 @@ bounds given above.
         {\contentdir/results/transport/void_to_absorber_ss/images/EVFCT.png}
       \caption{Entropy Viscosity FCT}
    \end{subfigure}
-   \caption{Comparison of Steady-State Solutions for 2-D Normal Void-to-Absorber Test
-     Problem with 4096 Cells with Exact Solution Bounds}
+   \caption{Comparison of Steady-State Solutions for 2-D Normal
+     Void-to-Ab\-sorber Test Problem with 4096 Cells with Exact Solution Bounds}
    \label{fig:void_to_absorber_ss}
 \end{figure}
 %-------------------------------------------------------------------------------
