--- a/doc/dissertation/references.bib
+++ b/doc/dissertation/references.bib
@@ -3,7 +3,7 @@
 
 
 @TechReport{IAEAFukushima,
-  Title                    = {The Fukushima Daiichi Accident},
+  Title                    = {The {F}ukushima {D}aiichi Accident},
   Author                   = {Yukiya Amano},
   Institution              = {International Atomic Energy Agency},
   Year                     = {2015},
@@ -49,7 +49,7 @@
 }
 
 @Article{bernetti2008,
-  Title                    = {Exact Solution of the Riemann Problem for the Shallow Water Equations with Discontinuous Bottom Geometry},
+  Title                    = {Exact Solution of the {R}iemann Problem for the Shallow Water Equations with Discontinuous Bottom Geometry},
   Author                   = {Bernetti, R. and Titarev, V. A. and Toro, E. F.},
   Journal                  = {J. Comput. Phys.},
   Year                     = {2008},
@@ -71,7 +71,7 @@
 }
 
 @Article{borisbook,
-  Title                    = {Flux-Corrected Transport I. {SHASTA}, A Fluid Transport Algorithm that Works},
+  Title                    = {Flux-Corrected Transport {I}. {SHASTA}, A Fluid Transport Algorithm that Works},
   Author                   = {Jay P. Boris and David L. Book},
   Journal                  = {Journal of Computational Physics},
   Year                     = {1973},
@@ -129,7 +129,7 @@
 }
 
 @Article{gottlieb,
-  Title                    = {On High Order Strong Stability Preserving Runge-Kutta and Multi Step Time Discretizations},
+  Title                    = {On High Order Strong Stability Preserving {R}unge-{K}utta and Multi Step Time Discretizations},
   Author                   = {Sigal Gottlieb},
   Journal                  = {Journal of Scientific Computing},
   Year                     = {2005},
@@ -137,6 +137,7 @@
   Month                    = {November},
   Number                   = {1},
   Volume                   = {25},
+  Pages                    = {105--128},
 
   Owner                    = {joshua},
   Timestamp                = {2016.05.08}
@@ -163,7 +164,7 @@
 }
 
 @Article{guermond_firstorder,
-  Title                    = {A Maximum-Principle Preserving $C^0$ Finite Element Method for Scalar Conservation Equations},
+  Title                    = {A Maximum-Principle Preserving {$C^0$} Finite Element Method for Scalar Conservation Equations},
   Author                   = {Jean-Luc Guermond and Murtazo Nazarov},
   Journal                  = {Computational Methods in Applied Mechanics and Engineering},
   Year                     = {2014},
@@ -172,7 +173,7 @@
 }
 
 @Article{guermond_secondorder,
-  Title                    = {A Second-Order Maximum Principle Preserving Lagrange Finite Element Technique for Nonlinear Scalar Conservation Equations},
+  Title                    = {A Second-Order Maximum Principle Preserving {L}agrange Finite Element Technique for Nonlinear Scalar Conservation Equations},
   Author                   = {Jean-Luc Guermond and Murtazo Nazarov and Bojan Popov and Yong Yang},
   Journal                  = {SIAM Journal on Numerical Analysis},
   Year                     = {2014},
@@ -197,7 +198,7 @@
 }
 
 @Conference{hamilton,
-  Title                    = {Negative Flux Fixups in Discontinuous Finite Element SN Transport},
+  Title                    = {Negative Flux Fixups in Discontinuous Finite Element {$S_N$} Transport},
   Author                   = {Steven Hamilton and Michele Benzi},
   Booktitle                = {International Conference on Mathematics, Computational Methods \& Reactor Physics},
   Year                     = {2009},
@@ -230,7 +231,7 @@
 }
 
 @Article{Kanayama2013,
-  Title                    = {A tsunami simulation of Hakata Bay using the viscous shallow-water equations},
+  Title                    = {A tsunami simulation of {H}akata {B}ay using the viscous shallow-water equations},
   Author                   = {Kanayama, Hiroshi and Dan, Hiroshi},
   Journal                  = {Japan Journal of Industrial and Applied Mathematics},
   Year                     = {2013},
@@ -354,7 +355,7 @@
 }
 
 @MastersThesis{macdonald,
-  Title                    = {Constructing High-Order Runge-Kutta Methods with Embedded Strong-Stability-Preserving Pairs},
+  Title                    = {Constructing High-Order {R}unge-{K}utta Methods with Embedded Strong-Stability-Preserving Pairs},
   Author                   = {Colin Barr Macdonald},
   School                   = {Acadia University},
   Year                     = {2003},
@@ -366,7 +367,7 @@
 }
 
 @Conference{maginot_mc2015,
-  Title                    = {A Non-Negative, Non-Linear Petrov-Galerkin Method for Bilinear Discontinuous Differencing of the Sn Equations},
+  Title                    = {A Non-Negative, Non-Linear Petrov-Galerkin Method for Bilinear Discontinuous Differencing of the {$S_N$} Equations},
   Author                   = {Peter Maginot},
   Booktitle                = {Joint International Conference on Mathematics and Computation, Supercomputing in Nuclear Applications, and the Monte Carlo Method (M\&C 2015)},
   Year                     = {2015},
@@ -483,22 +484,21 @@
   Volume                   = {31}
 }
 
-@Periodical{IAEA_fukushima_scale,
+@Misc{IAEA_fukushima_scale,
   Title                    = {Fukushima Nuclear Accident Update Log},
   Year                     = {2011},
   Month                    = {April},
-  Organization             = {IAEA},
-  Url                      = {https://www.iaea.org/newscenter/news/fukushima-nuclear-accident-update-log-15},
-
+  Author                   = {International Atomic Energy Agency},
+  Note                     = {\url{https://www.iaea.org/newscenter/news/fukushima-nuclear-accident-update-log-15}},
   Owner                    = {joshua},
   Timestamp                = {2016.05.03}
 }
 
-@Periodical{USGS_tohoku,
-  Title                    = {Magnitude 9.03 – Near The East Coast Of Honshu, Japan},
+@Misc{USGS_tohoku,
+  Title                    = {Magnitude 9.03 - Near the East Coast of {H}onshu, {J}apan},
   Year                     = {2011},
-  Organization             = {United States Geological Survey},
-
+  Author                   = {United States Geological Survey},
+  Note                     = {\url{http://earthquake.usgs.gov/earthquakes/eqinthenews/2011/usc0001xgp/}},
   Owner                    = {joshua},
   Timestamp                = {2016.05.03}
 }
