--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -1,5 +1,6 @@
 \documentclass{elsarticle}
 
+\usepackage{amsmath}
 \usepackage{hyperref}
 
 \input{shortcuts}
@@ -52,4 +53,3 @@ entropy viscosity \sep FCT \sep CGFEM \sep transport equation
 \bibliography{references}
 
 \end{document}
-
