--- a/doc/dissertation/abstract.tex
+++ b/doc/dissertation/abstract.tex
@@ -23,7 +23,6 @@ transport and the shallow water equations, and additionally
 for scalar transport, Theta time discretizations and
 steady-state are considered. Explicit FCT schemes are shown to
 be relatively robust, but implicit/steady-state FCT schemes, however,
-are shown to have significant nonlinear convergence issues in many cases,
-as noted by Kuzmin \cite{kuzmin_FCT}.
+are shown to have significant nonlinear convergence issues in many cases.
 
 \pagebreak{}
