--- a/doc/paper/shortcuts.tex
+++ b/doc/paper/shortcuts.tex
@@ -1,6 +1,19 @@
+% equation punctuation
+\newcommand{\eqp}{\,.} % equation period
+\newcommand{\eqc}{\,,} % equation comma
+
+% derivatives
+\newcommand{\dd}[2]{\frac{d #1}{d #2}}               % ordinary derivative
+\newcommand{\pd}[2]{\frac{\partial #1}{\partial #2}} % partial derivative
+\newcommand{\ppt}[1]{\pd{#1}{t}}                     % partial d/dt
+\newcommand{\ppx}[1]{\pd{#1}{x}}                     % partial d/dx
+\newcommand{\ppy}[1]{\pd{#1}{y}}                     % partial d/dy
+\newcommand{\ddt}[1]{\frac{d#1}{dt}}                 % ordinary d/dt
+
 % phase-space arguments
 \newcommand{\x}{\mathbf{x}}
 \newcommand{\di}{\mathbf{\Omega}}
+\newcommand{\xt}{(\x,t)}
 \newcommand{\xet}{(\x,E,t)}
 \newcommand{\xdet}{(\x,\di,E,t)}
 
