--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -33,19 +33,19 @@ entropy viscosity \sep FCT \sep CGFEM \sep transport equation
 \end{frontmatter}
 %------------------------------------------------------------------------------
 
-\section{Introduction}
+\section{Introduction\label{sec:introduction}}
 \input{content/introduction}
 
-\section{Preliminaries}
+\section{Preliminaries\label{sec:preliminaries}}
 \input{content/preliminaries}
 
-\section{Methodology}
+\section{Methodology\label{sec:methodology}}
 \input{content/methodology}
 
-\section{Results}
+\section{Results\label{sec:results}}
 \input{content/results}
 
-\section{Conclusions}
+\section{Conclusions\label{sec:conclusions}}
 \input{content/conclusions}
 
 \section*{References}
