--- a/doc/paper/shortcuts.tex
+++ b/doc/paper/shortcuts.tex
@@ -24,3 +24,23 @@
 \newcommand{\fissionxsec}{\Sigma_\textup{f}}
 \newcommand{\Qext}{Q_\textup{ext}}
 \newcommand{\Qtot}{Q_\textup{tot}}
+
+% domain
+\newcommand{\domain}{\mathcal{D}}
+\newcommand{\normalvector}{\mathbf{n}}
+\newcommand{\incoming}{u^{\textup{inc}}}
+
+% linear system
+\newcommand{\U}{\mathbf{U}}
+\newcommand{\A}{\mathbf{A}}
+\newcommand{\ssrhs}{\mathbf{b}}
+\newcommand{\M}{\mathbf{M}}
+\newcommand{\dt}{\Delta t}
+
+% integrals and sums
+\newcommand{\sumj}{\sum\limits_j}
+\newcommand{\intSi}{\int\limits_{S_i}}
+\newcommand{\intSij}{\int\limits_{S_{i,j}}}
+
+% FEM
+\newcommand{\test}{\varphi}
