small additions to paper

--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -9,7 +9,7 @@
 %------------------------------------------------------------------------------
 \begin{frontmatter}
 
-\journal{Journal of Joshua Sciences}
+\journal{Journal of Computational and Applied Mathematics}
 
 \title{Application of the Entropy Viscosity Method and the Flux-Corrected Transport
   Algorithm to the Transport Equation using Continuous Finite Elements}
@@ -41,6 +41,12 @@ entropy viscosity \sep FCT \sep CGFEM \sep transport equation
 
 \section{Methodology\label{sec:methodology}}
 \input{content/methodology}
+\subsection{Low-Order Scheme\label{sec:low}}
+\input{content/low}
+\subsection{High-Order Scheme\label{sec:high}}
+\input{content/high}
+\subsection{FCT Scheme\label{sec:fct}}
+\input{content/fct}
 
 \section{Results\label{sec:results}}
 \input{content/results}
