--- a/doc/paper/content/methodology.tex
+++ b/doc/paper/content/methodology.tex
@@ -1,23 +1,4 @@
-
-small intro to each big part
-
-\begin{itemize}
-\item low-order method
-  \begin{itemize}
-    \item definitions - graph-theoretic bilinear form, viscosity, scheme
-    \item M-matrix
-    \item positivity preservation
-    \item local DMP
-  \end{itemize}
-\item high-order method
-  \begin{itemize}
-    \item definitions - entropy residual, entropy viscosity, scheme
-  \end{itemize}
-\item FCT method
-  \begin{itemize}
-    \item definitions - antidiffusive source and fluxes, scheme
-    \item solution bounds - characteristic (upwind and non-upwind)
-    \item antidiffusion bounds - definition and requirements for fail-safe
-    \item limiters - Zalesak, multi-pass?
-  \end{itemize}
-\end{itemize}
+Recall that the FCT algorithm is built from a low-order scheme and a high-order
+scheme. Section \ref{sec:low} describes the low-order scheme, and Section
+\ref{sec:high} describes the high-order scheme. Then Section \ref{sec:fct}
+describes the FCT scheme combined from these components.
